@@ -320,16 +320,17 @@ public:
   static void VCF2GD( const string& vcffile, const string& gdfile )
   { cGenomeDiff gd; gd.read_vcf(vcffile); gd.write(gdfile); }
   
-  //! Convert GD to PHYLIP input file
+  //! Convert GD to PHYLIP/FASTA input file
+  //! format must be PHYLIP or FASTA
   //! 
-  static void write_phylip(string& output_phylip_file_name, 
+  static void write_genotype_sequence_file(
+                           const string& format,
+                           const string& output_file_name,
                            cGenomeDiff& master_gd, 
                            vector<cGenomeDiff>& gd_list,
                            cReferenceSequences& ref_seq_info,
                            bool missing_as_ancestral = false,
                            bool verbose = false);
-  
-
   
   
   //! Convert GD to Circos files
